/*
 * $Id: ChangeLog,v 1.1695 2003/11/11 14:38:03 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-11 12:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/classes.h
  * include/hbapi.h
  * include/inet.h
  * include/simplex.c
  * source/codepage/cdpltwin.c
  * source/lang/msgltwin.c
  * source/macro/macro.slx
  * source/pp/ppcore.c
  * source/rtl/filesys.c
  * source/rtl/fssize.c
  * source/rtl/fstemp.c
  * source/rtl/gtapi.c
  * source/rtl/isprint.c
  * source/rtl/philes.c
  * source/rtl/win32ole.prg
  * source/rtl/gtwin/gtwin.c
  * source/vm/classes.c
  * source/vm/errorapi.c
  * source/vm/eval.c
  * source/vm/hash.c
  * source/vm/inet.c
  * source/vm/runner.c
  * source/vm/thread.c
    * Fixed compilation warnings.

2003-11-11 15:35 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed codepage initialization which I damage in one of
      the last commit

2003-11-10 18:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hberrors.h
    + Added: #define HB_PP_ERR_UNKNOWN_RESULTMARKER          23

  * source/pp/ppcore.c
    - Renamed RemoveSlash() RemoveNotInstanciated() and removed '\\' related logic.
    + Added '\' removal logic into ConvertPatterns()
    + Added logic to detect unknown result markers, and raise an "Unknown result marker <%s> in #directive" error.

2003-11-11 02:30 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
    * small changes for detecting packages on connectiva

  * xharbour/xharbour.spec
    - remove build requires for mysql and odbc. This packages used to
      have different names in different distros so we will have to set
      long list for for them inside spec. I think they should be check
      in make_rpm.sh and if user installed them manually then can use
      --force switch
