@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1695 2003/11/11 14:38:03 druzus Exp $
+ * $Id: ChangeLog,v 1.1696 2003/11/11 20:20:44 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-10 01:55 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
+ *source\vm\classes.c
+   * fixed comment of __SetClassAutoInit() function
 
 2003-11-11 12:19 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/classes.h
